# OpenCV_CPP

./: .gitignore  CMakeLists.txt  README.md
basics/: CMakeLists.txt  LenaGray.cpp  OpenCamera.cpp
config/: CMakeLists.txt  CVEnv.h.in
